--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,7 @@ erl_crash.dump
 # Ignore package tarball (built via "mix hex.build").
 ketchup-*.tar
 
+#riak core local git ignores
+data/
+log/
+ring_state_dir/
